<resources>
    <string name="app_name">Task2</string>
    <string name="hint_search">search picture</string>
    <string name="btn_name">Search</string>
    <string name="btn_recent">Recent</string>
    <string name="btn_favourites">Favourites</string>
    <string name="tv_favourites_header">Favourites</string>
    <string name="tv_recent_header">Recent</string>
    <string name="btn_login">Login</string>
    <string name="no_photos">No photos</string>

    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Coordinates</string>

    <string name="toast_in_favourites">Photo is already in favourites</string>
    <string name="toast_not_in_favourites">Photo is not in favourites</string>
    <string name="toast_added_to_favourites">Photo is added to favourites</string>
    <string name="toast_deleted_from_favourites">Photo deleted from favourites</string>
    <string name="toast_no_favourites">No favourite photos</string>
    <string name="toast_no_more_photos">No more Photos</string>
    <string name="btn_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_search">Search</string>
    <string name="tv_gallery">Gallery</string>
    <string name="toast_download_completed">Download completed</string>
    <string name="toast_required_write_external_storage_permission">Required write external storage permission</string>


    <string name="my_app_name">Photo Search</string>
    <string name="hint_username">Username</string>
    <string name="activity_gallery">Gallery</string>
    <string name="menu_title_take_photo">takePhoto</string>

    <string name="activity_recent">Recent</string>
    <string name="activity_favourites">Favourites</string>

    <string name="menu_title_resent_photos">Resent photos</string>
    <string name="menu_title_map">Map</string>
    <string name="menu_title_gallery">Gallery</string>
    <string name="menu_title_favourites_photos">Favourites</string>
    <string name="menu_item_title_add_to_favourites">like</string>
    <string name="menu_item_title_delete_from_favourites">delete</string>
    <string name="menu_item_download">download</string>

    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_search_photos">Search photos</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_title_loaded_photos">Loaded photos</string>

</resources>
